<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>de.kisner.xbtjl</groupId>
	<artifactId>xbtjl</artifactId>
	<version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    
    <name>xbtjl</name>
	<description>Java BitTorrent Library</description>
	<url>https://github.com/thorsten-k/xbtjl</url>

	<modules>
		<module>client</module>
		<module>core</module>
		<module>xml</module>
		<module>util</module>
	</modules>
	
	<properties>
    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    	<my.build.directory>target</my.build.directory>
    	<version.jetty>8.1.17.v20150415</version.jetty>
		
    	<maven-gpg-plugin.version>1.4</maven-gpg-plugin.version>
    	<maven-javadoc-plugin.version>2.8</maven-javadoc-plugin.version>
    	<maven-source-plugin.version>2.1.2</maven-source-plugin.version>
	</properties>

	<prerequisites>
		<maven>3.1</maven>
	</prerequisites>

	<licenses>
		<license>
			<name>GNU General Public License</name>
			<url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/thorsten-k/xbtjl.git</url>
		<connection>scm:git:git://github.com/thorsten-k/xbtjl.git</connection>
		<developerConnection>scm:git:git@github.com/thorsten-k/xbtjl.git</developerConnection>
	</scm>
	
	<developers>
		<developer>
			<id>1</id>
			<name>Thorsten Kisner</name>
			<email>t.kisner@web.de</email>
		</developer>
	</developers>
	
	<issueManagement>
	</issueManagement>
	
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>de.kisner.xbtjl</groupId>
				<artifactId>xbtjl-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>de.kisner.xbtjl</groupId>
				<artifactId>xbtjl-util</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>de.kisner.xbtjl</groupId>
				<artifactId>xbtjl-xml</artifactId>
				<version>${project.version}</version>
			</dependency>
			
			<dependency>
				<groupId>joda-time</groupId>
				<artifactId>joda-time</artifactId>
				<version>2.8.2</version>
			</dependency>
			<dependency>
			    <groupId>org.bitlet</groupId>
			    <artifactId>weupnp</artifactId>
			    <version>0.1.3</version>
			</dependency>
			
			<dependency>
    	   		<groupId>net.sf.exlp</groupId>
    	   		<artifactId>exlp-bom</artifactId>
    	   		<version>0.1.18-SNAPSHOT</version>
    	   		<type>pom</type>
				<scope>import</scope>
    	   	</dependency>
    	   	
    	   	<!-- Jetty -->
			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-server</artifactId>
				<version>${version.jetty}</version>
			</dependency>
	    	<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-servlet</artifactId>
				<version>${version.jetty}</version>
			</dependency>
	        <dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-webapp</artifactId>
				<version>${version.jetty}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-annotations</artifactId>
				<version>${version.jetty}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-jsp</artifactId>
				<version>${version.jetty}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<inherited>true</inherited>
					<version>3.8.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<inherited>true</inherited>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-surefire-plugin</artifactId>
		        <version>2.4.2</version>
		        <configuration>
		          <systemProperties>
		            <property>
		              <name>targetDir</name>
		              <value>${my.build.directory}</value>
		            </property>
		          </systemProperties>
		        </configuration>
			</plugin>
			<plugin>
        		<groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-enforcer-plugin</artifactId>
		        <version>1.0.1</version>
		        <executions>
					<execution>
		            	<id>enforce-banned-dependencies</id>
		           		<goals><goal>enforce</goal></goals>
			            <configuration>
							<rules>
				       			<bannedDependencies>
				           			<excludes>
				              			<exclude>commons-logging:commons-logging</exclude>
				           			</excludes>
				      			</bannedDependencies>
				        	</rules>
				    		<fail>true</fail>
	            		</configuration>
          			</execution>
        		</executions>
      		</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>jboss-public</id>
			<name>JBoss Repository</name>
			<url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
		</repository>
	</repositories>
	
	<pluginRepositories>
		<pluginRepository>
			<id>codehaus.org</id>
			<name>CodeHaus Plugin Snapshots</name>
			<url>http://snapshots.repository.codehaus.org</url>
			<releases><enabled>false</enabled></releases>
		</pluginRepository>
	</pluginRepositories>

 	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<profiles>
    	<profile>
       		<id>ram</id>
       		<build>
       			<directory>${my.build.directory}</directory>
       		</build>
   		</profile>
   		<profile>
       		<id>release</id>
       		<build>
       			<directory>${my.build.directory}</directory>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.5</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals><goal>sign</goal></goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>2.2.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals><goal>jar-no-fork</goal></goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.9.1</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals><goal>jar</goal></goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>1.6.7</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>false</autoReleaseAfterClose>
						</configuration>
					</plugin>
				</plugins>
			</build>
   		</profile>
	</profiles>

</project>